# HTTP-TTS-SUPPORT-android-

./: README.MD  local.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/idlike/ttssupport/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/src/tn/glog/src/: stacktrace_generic-inl.h
app/src/main/java/com/idlike/ttssupport/: EncodingDetect.java  FileAdapter.java  FileModel.java  HttpSupport.java  IniLib.java  MainActivity.java  ModelMgrActivity.java  nativeTtsAPI.java
app/src/main/res/layout/: activity_main.xml  file_item.xml  modelmgr.xml
app/src/main/res/menu/: menu.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/idlike/ttssupport/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
